{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player controll",
            "id": "60a5bda3-72ac-4f63-9360-600ba88b6d67",
            "actions": [
                {
                    "name": "Drive forward",
                    "type": "Button",
                    "id": "ad4d3eb3-b7a3-4579-9dfc-f53cbf42072e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drive back",
                    "type": "Button",
                    "id": "2f890fc4-954c-4b98-910a-a5b64ff12292",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Steer",
                    "type": "Value",
                    "id": "c48e9626-d96c-42fd-afce-5e17c9697df2",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Drift",
                    "type": "Button",
                    "id": "44f829fc-def5-4900-8fdf-baeb305fbe6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50c7333e-1a4a-4918-b965-2c78b616d26d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44e06236-0a43-4656-8209-baf369ae305d",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe7affca-a878-4cc2-ace6-55fb82270cd7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "697fdfce-dc75-4ae7-82aa-6bca85b80b16",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}